# ma

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: dashboard.Dockerfile  pipeline.Dockerfile
docs/: architecture.md
src/trusted_ai_soc_lite/: __init__.py  __main__.py  config.py  data_models.py  pipeline.py
src/trusted_ai_soc_lite/ai/: engine.py  xai.py
src/trusted_ai_soc_lite/audit/: logger.py
src/trusted_ai_soc_lite/dashboard/: app.py
src/trusted_ai_soc_lite/responder/: actions.py
src/trusted_ai_soc_lite/scanners/: nmap_scanner.py
tests/: conftest.py  test_pipeline.py
